---------------------------------------------------------------------------
Version 6.5.0  [devel] 2012-0?-??
- added --enable-debugless configure option for very high demanding envs
  This actually at compile time disables a lot of debug code, resulting
  in some speedup (but serious loss of debugging capabilities)
---------------------------------------------------------------------------
Version 6.3.10  [BETA] 2012-0?-??
- bugfix: invalid free in imptcp could lead to abort during startup
- bugfix: if debug message could end up in log file when forking
  if rsyslog was set to auto-background (thus fork, the default) and debug
  mode to stdout was enabled, debug messages ended up in the first log file
  opened. Currently, stdout logging is completely disabled in forking mode
  (but writing to the debug log file is still possible). This is a change 
  in behaviour, which is under review. If it causes problems to you,
  please let us know.
  Thanks to Tomas Heinrich for the patch.
---------------------------------------------------------------------------
Version 6.3.9  [BETA] 2012-05-22
- bugfix: imtcp could cause hang during reception
  this also applied to other users of core file tcpsrv.c, but imtcp was
  by far the most prominent and widely-used, the rest rather exotic
  (like imdiag)
- added capability to specify substrings for field extraction mode
- added the "jsonf" property replacer option (and fieldname)
- bugfix: omudpspoof did not work correctly if no spoof hostname was
  configured
- bugfix: property replacer option "json" could lead to content loss
  message was truncated if escaping was necessary
- bugfix: assigned ruleset was lost when using disk queues
  This looked quite hard to diagnose for disk-assisted queues, as the
  pure memory part worked well, but ruleset info was lost for messages
  stored inside the disk queue.
- bugfix/imuxsock: solving abort if hostname was not set; configured
  hostname was not used (both merge regressions)